# MyOmniViewTest

./: .gitignore  CMakeLists.txt
src/: DevicesMenu.hpp  Includinglibaries.hpp  MainWindow.hpp  SideBarMenu.hpp  Style.hpp  Toolbar.hpp  main.cpp
